feat: add artist route logic
